foundation-objs/main/default/objects/Asset_CSM_Details__c/Asset_CSM_Details__c.object-meta.xml
<CustomObject>
    <label>Asset CSM Details</label>
    <nameField>
        <label>Asset CSM Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset CSM Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>