foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Introduction_Email_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Email_Completion_Date__c</fullName>
    <label>Introduction Email Completion Date</label>
    <type>Date</type>
</CustomField>