foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Is_Asset_Activated__c.field-meta.xml
<CustomField>
    <fullName>Is_Asset_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Asset Activated?</label>
    <type>Checkbox</type>
</CustomField>