foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Is_Non_GST_EInv_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_GST_EInv_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non GST/EInv Success</label>
    <type>Checkbox</type>
</CustomField>