foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/License_Account_creation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Account_creation_Completion_Date__c</fullName>
    <label>License Account creation Completion Date</label>
    <type>Date</type>
</CustomField>