foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Completed_Date__c</fullName>
    <label>Onboarding Completed Date</label>
    <type>Date</type>
</CustomField>