foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Delay_Reason__c</fullName>
    <label>Onboarding Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client availability</fullName>
            </value>
            <value>
                <fullName>Client not responding</fullName>
            </value>
            <value>
                <fullName>Integration pending</fullName>
            </value>
            <value>
                <fullName>Prerequisites not available to customer</fullName>
            </value>
            <value>
                <fullName>Legal dependency</fullName>
            </value>
            <value>
                <fullName>MSA issues</fullName>
            </value>
            <value>
                <fullName>Scope not clear – sales commitment vs actual</fullName>
            </value>
            <value>
                <fullName>Product dependencies / requirements</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>