foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_Delay_Reason_Comment__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Delay_Reason_Comment__c</fullName>
    <label>Onboarding Delay Reason Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>