foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Process_Start_Date__c</fullName>
    <label>Onboarding Process Start Date</label>
    <type>Date</type>
</CustomField>