foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Stage__c</fullName>
    <description>Current stage in the onboarding process</description>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>Sales CSM Handover</fullName>
            </value>
            <value>
                <fullName>Introduction Email / Kickoff Call</fullName>
            </value>
            <value>
                <fullName>Customer Prerequisite Collection</fullName>
            </value>
            <value>
                <fullName>Customer License Account Creation</fullName>
            </value>
            <value>
                <fullName>Product Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>