foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Onboarding_status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_status__c</fullName>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status</valueSetName>
    </valueSet>
</CustomField>