foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Prerequisite_collection_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_collection_Completion_Date__c</fullName>
    <label>Prerequisite collection Completion Date</label>
    <type>Date</type>
</CustomField>