foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom print template</fullName>
            </value>
            <value>
                <fullName>Custom excel mapping</fullName>
            </value>
            <value>
                <fullName>GSTN registration</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>OTP Unavailability (NIC)</fullName>
            </value>
            <value>
                <fullName>List of All GSTNs &amp; their NIC Credentials</fullName>
            </value>
            <value>
                <fullName>Live Data</fullName>
            </value>
            <value>
                <fullName>Email Address &amp; Phone No. Verification</fullName>
            </value>
            <value>
                <fullName>OTP Unavailability</fullName>
            </value>
            <value>
                <fullName>List of All GSTNs &amp; their GST Credentials</fullName>
            </value>
            <value>
                <fullName>Recon-Sales &amp; Purchase Data</fullName>
            </value>
            <value>
                <fullName>Live Filing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>