foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Prerequisites_Check__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prerequisites?</label>
    <type>Checkbox</type>
</CustomField>