foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Product_training_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_training_Completion_Date__c</fullName>
    <label>Product  training Completion Date</label>
    <type>Date</type>
</CustomField>