foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Product_training_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_training_Status__c</fullName>
    <label>Product  training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be started</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>