foundation-objs/main/default/objects/Asset_CSM_Details__c/fields/Sales_CSM_Handover_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_CSM_Handover_Completion_Date__c</fullName>
    <label>Sales CSM Handover Completion Date</label>
    <type>Date</type>
</CustomField>